<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.ssehub.program-repair</groupId>
	<artifactId>geneseer</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
		</license>
	</licenses>

	<organization>
		<name>Software Systems Engineering, Universtiy of Hildesheim</name>
		<url>https://sse.uni-hildesheim.de/</url>
	</organization>

	<scm>
		<connection>scm:git:https://github.com/adam-sse/geneseer.git</connection>
		<developerConnection>scm:git:https://github.com/adam-sse/geneseer.git</developerConnection>
		<url>https://github.com/adam-sse/geneseer</url>
	</scm>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>copy-geneseer-test-driver</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeArtifactIds>geneseer-test-driver</includeArtifactIds>
							<classifier>jar-with-dependencies</classifier>
							<failOnMissingClassifierArtifact>true</failOnMissingClassifierArtifact>
							<outputDirectory>src/main/resources/net/ssehub/program_repair/geneseer/evaluation</outputDirectory>
							<stripVersion>true</stripVersion>
							<stripClassifier>true</stripClassifier>
						</configuration>
					</execution>
					<execution>
						<id>copy-jacocoagent</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeArtifactIds>org.jacoco.agent</includeArtifactIds>
							<classifier>runtime</classifier>
							<failOnMissingClassifierArtifact>true</failOnMissingClassifierArtifact>
							<outputDirectory>src/main/resources/net/ssehub/program_repair/geneseer/evaluation</outputDirectory>
							<stripVersion>true</stripVersion>
							<stripClassifier>true</stripClassifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <failOnViolation>true</failOnViolation>
                    <includeResources>false</includeResources>
                    <includeTestResources>false</includeTestResources>
                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.12.4</version>
                    </dependency>
                </dependencies>
            </plugin>
			<plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.13.1</version>
                <configuration>
                    <listener>false</listener>
                </configuration>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
				    <includes>net.ssehub.program_repair.geneseer.*</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>net.ssehub.program-repair</groupId>
			<artifactId>geneseer-test-driver</artifactId>
			<version>2.2.1</version>
			<!-- don't include in compile or runtime classpath; only make it available for the maven-dependency-plugin to copy it 
				to the resource folder -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.agent</artifactId>
			<version>0.8.11</version>
			<!-- don't include in compile or runtime classpath; only make it available for the maven-dependency-plugin to copy it 
				to the resource folder -->
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.core</artifactId>
			<version>0.8.11</version>
		</dependency>
		
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.13.1</version>
        </dependency>
        
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
	</dependencies>
</project>
